--- a/app/src/pages/lista-cupom/lista-cupom.html
+++ b/app/src/pages/lista-cupom/lista-cupom.html
@@ -20,13 +20,14 @@
       </ion-item-options>
     </ion-item-sliding>  
   </ion-list>
+  <p align="center"><img src="{{foto}}"></p>
   <ion-fab bottom right>
     <button ion-fab color="primary" (click)="testarUrl()"> 
       <ion-icon name="add"></ion-icon>
     </button>
   </ion-fab>
   <ion-fab bottom center>
-    <button ion-fab color="primary" (click)="mostrarImagem()">
+    <button ion-fab color="primary" (click)="abrirEscolhaImagem()">
       <ion-icon name="camera"></ion-icon>
     </button>
   </ion-fab>
