--- a/app/src/pages/cad-cupom/cad-cupom.html
+++ b/app/src/pages/cad-cupom/cad-cupom.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Cadastro de Cupom</ion-title>
+    <ion-title>Cupom</ion-title>
   </ion-navbar>
 </ion-header>
 
